Fixed bug with align in registration and login pages

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -24,6 +24,13 @@ button:hover{
   border-style: none;
 }
 
+.window-wrapper{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 input {
   border: 1px solid rgba(255,255,255,0.3);
