--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,7 +1,9 @@
+
+
+
+
 .login-form{
   width: 400px;
-  margin: 0 auto;
-  margin-top: 40%;
   .text-row{
     width: 100%;
     text-align: center;
