--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,17 @@
   height: calc(100vh - 85px);
 }
 
+.piechart-dates{
+  width: 100%;
+  height: 35px;
+}
+
+.piechart-dates{
+  width: 100%;
+  height: 35px;
+}
+
+
 .categories{
   width: 48%;
   float: right;
@@ -38,5 +49,5 @@
 .add-category{
   width: 100%;
   height: 13%;
-  margin-top: 4%;
+  margin-top: 3%;
 }
