--- a/src/styles/registration.scss
+++ b/src/styles/registration.scss
@@ -1,7 +1,6 @@
+
 .registration-form{
   width: 400px;
-  margin: 0 auto;
-  margin-top: 25%;
   .text-row{
     width: 100%;
     text-align: center;
